# dexdey

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
slf4j/slf4j-api/2.0.18/: _remote.repositories  slf4j-api-2.0.18.pom
slf4j/slf4j-simple/2.0.18/: _remote.repositories  slf4j-simple-2.0.18.jar.sha1  slf4j-simple-2.0.18.pom  slf4j-simple-2.0.18.pom.sha1
src/: config.rs  main.rs
src/plugin/: event.rs  load.rs  mod.rs  parse.rs
src/protocol/: decode.rs  error.rs  forwarding.rs  frame.rs  mod.rs  packet.rs  varint.rs  version.rs
src/protocol/packets/: handshake.rs  login.rs  status.rs
src/proxy/: mod.rs
