[package]
name = "dexdey"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = { version = "0.22.4", features = ["invocation"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
zip = "8.6.0"

[build-dependencies]
reqwest = { version = "0.13.4", features = ["stream"] }
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
roxmltree = "0.20.0"
