[package]
name = "dexdey"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = { version = "0.22.4", features = ["invocation"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
zip = "8.6.0"
bytes = "1.12.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
hmac = "0.12.1"
sha2 = "0.10.9"
md-5 = "0.11.0"
uuid = { version = "1.23.4", features = ["v4"] }
reqwest = { version = "0.13.4", features = ["json"] }

[build-dependencies]
reqwest = { version = "0.13.4", features = ["stream"] }
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
roxmltree = "0.21.1"
